@@ -23,16 +23,15 @@ package com.openhtmltopdf.css.parser.property;
 import java.util.HashMap;
 import java.util.Map;
 
-import org.w3c.dom.css.CSSPrimitiveValue;
-
 import com.openhtmltopdf.css.constants.IdentValue;
+import com.openhtmltopdf.css.parser.CSSPrimitiveValue;
 import com.openhtmltopdf.css.parser.FSRGBColor;
 import com.openhtmltopdf.css.parser.PropertyValue;
 
 public class Conversions {
-    private static final Map COLORS = new HashMap();
-    private static final Map NUMERIC_FONT_WEIGHTS = new HashMap();
-    private static final Map BORDER_WIDTHS = new HashMap();
+    private static final Map<String, FSRGBColor> COLORS = new HashMap<>();
+    private static final Map<Float, IdentValue> NUMERIC_FONT_WEIGHTS = new HashMap<>();
+    private static final Map<String, PropertyValue> BORDER_WIDTHS = new HashMap<>();
     
     static {
         COLORS.put("cyan", new FSRGBColor(0x00FFFF));
@@ -177,15 +176,15 @@ public class Conversions {
     }
     
     static {
-        NUMERIC_FONT_WEIGHTS.put(new Float(100f), IdentValue.FONT_WEIGHT_100);
-        NUMERIC_FONT_WEIGHTS.put(new Float(200f), IdentValue.FONT_WEIGHT_200);
-        NUMERIC_FONT_WEIGHTS.put(new Float(300f), IdentValue.FONT_WEIGHT_300);
-        NUMERIC_FONT_WEIGHTS.put(new Float(400f), IdentValue.FONT_WEIGHT_400);
-        NUMERIC_FONT_WEIGHTS.put(new Float(500f), IdentValue.FONT_WEIGHT_500);
-        NUMERIC_FONT_WEIGHTS.put(new Float(600f), IdentValue.FONT_WEIGHT_600);
-        NUMERIC_FONT_WEIGHTS.put(new Float(700f), IdentValue.FONT_WEIGHT_700);
-        NUMERIC_FONT_WEIGHTS.put(new Float(800f), IdentValue.FONT_WEIGHT_800);
-        NUMERIC_FONT_WEIGHTS.put(new Float(900f), IdentValue.FONT_WEIGHT_900);
+        NUMERIC_FONT_WEIGHTS.put(Float.valueOf(100f), IdentValue.FONT_WEIGHT_100);
+        NUMERIC_FONT_WEIGHTS.put(Float.valueOf(200f), IdentValue.FONT_WEIGHT_200);
+        NUMERIC_FONT_WEIGHTS.put(Float.valueOf(300f), IdentValue.FONT_WEIGHT_300);
+        NUMERIC_FONT_WEIGHTS.put(Float.valueOf(400f), IdentValue.FONT_WEIGHT_400);
+        NUMERIC_FONT_WEIGHTS.put(Float.valueOf(500f), IdentValue.FONT_WEIGHT_500);
+        NUMERIC_FONT_WEIGHTS.put(Float.valueOf(600f), IdentValue.FONT_WEIGHT_600);
+        NUMERIC_FONT_WEIGHTS.put(Float.valueOf(700f), IdentValue.FONT_WEIGHT_700);
+        NUMERIC_FONT_WEIGHTS.put(Float.valueOf(800f), IdentValue.FONT_WEIGHT_800);
+        NUMERIC_FONT_WEIGHTS.put(Float.valueOf(900f), IdentValue.FONT_WEIGHT_900);
     }
     
     static {
@@ -195,15 +194,15 @@ public class Conversions {
     }
     
     public static FSRGBColor getColor(String ident) {
-        return (FSRGBColor)COLORS.get(ident);
+        return COLORS.get(ident);
     }
     
     public static IdentValue getNumericFontWeight(float weight) {
-        return (IdentValue)NUMERIC_FONT_WEIGHTS.get(new Float(weight));
+        return NUMERIC_FONT_WEIGHTS.get(Float.valueOf(weight));
     }
     
     public static PropertyValue getBorderWidth(String ident) {
-        return (PropertyValue)BORDER_WIDTHS.get(ident);
+        return BORDER_WIDTHS.get(ident);
     }
     
 }
