@@ -20,11 +20,12 @@
  */
 package com.openhtmltopdf.layout;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Deque;
 import java.util.HashMap;
 import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
@@ -32,7 +33,6 @@ import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
 import org.w3c.dom.Text;
-import org.w3c.dom.css.CSSPrimitiveValue;
 
 import com.openhtmltopdf.bidi.BidiSplitter;
 import com.openhtmltopdf.bidi.BidiTextRun;
@@ -44,6 +44,7 @@ import com.openhtmltopdf.css.constants.PageElementPosition;
 import com.openhtmltopdf.css.extend.ContentFunction;
 import com.openhtmltopdf.css.newmatch.CascadedStyle;
 import com.openhtmltopdf.css.newmatch.PageInfo;
+import com.openhtmltopdf.css.parser.CSSPrimitiveValue;
 import com.openhtmltopdf.css.parser.FSFunction;
 import com.openhtmltopdf.css.parser.PropertyValue;
 import com.openhtmltopdf.css.sheet.PropertyDeclaration;
@@ -60,6 +61,8 @@ import com.openhtmltopdf.render.AnonymousBlockBox;
 import com.openhtmltopdf.render.BlockBox;
 import com.openhtmltopdf.render.Box;
 import com.openhtmltopdf.render.FloatedBoxData;
+import com.openhtmltopdf.render.FlowingColumnBox;
+import com.openhtmltopdf.render.FlowingColumnContainerBox;
 import com.openhtmltopdf.render.InlineBox;
 
 /**
@@ -93,8 +96,7 @@ public class BoxBuilder {
     }
     
     public static BlockBox createRootBox(LayoutContext c, Document document) {
-        
-    	splitParagraphs(c, document);
+        splitParagraphs(c, document);
     	
         Element root = document.getDocumentElement();
 
@@ -112,20 +114,16 @@ public class BoxBuilder {
 
         c.resolveCounters(style);
 
-        c.pushLayer(result);
-        if (c.isPrint()) {
-            if (! style.isIdent(CSSName.PAGE, IdentValue.AUTO)) {
-                c.setPageName(style.getStringProperty(CSSName.PAGE));
-            }
-            c.getRootLayer().addPage(c);
-        }
-
         return result;
     }
 
     public static void createChildren(LayoutContext c, BlockBox parent) {
+        if (parent.shouldBeReplaced()) {
+            parent.setChildrenContentType(BlockBox.CONTENT_EMPTY);
+            return;
+        }
 
-		List children = new ArrayList();
+        List<Styleable> children = new ArrayList<>();
 
         ChildBoxInfo info = new ChildBoxInfo();
 
@@ -133,6 +131,7 @@ public class BoxBuilder {
 
         boolean parentIsNestingTableContent = isNestingTableContent(parent.getStyle().getIdent(
                 CSSName.DISPLAY));
+        
         if (!parentIsNestingTableContent && !info.isContainsTableContent()) {
             resolveChildren(c, parent, children, info);
         } else {
@@ -232,13 +231,13 @@ public class BoxBuilder {
 
         if (direction == MARGIN_BOX_VERTICAL && cellCount > 0) {
             int rHeight = 0;
-            for (Iterator i = section.getChildIterator(); i.hasNext(); ) {
+            for (Iterator<Box> i = section.getChildIterator(); i.hasNext(); ) {
                 TableRowBox r = (TableRowBox)i.next();
                 r.setHeightOverride(height / cellCount);
                 rHeight += r.getHeightOverride();
             }
 
-            for (Iterator i = section.getChildIterator(); i.hasNext() && rHeight < height; ) {
+            for (Iterator<Box> i = section.getChildIterator(); i.hasNext() && rHeight < height; ) {
                 TableRowBox r = (TableRowBox)i.next();
                 r.setHeightOverride(r.getHeightOverride()+1);
                 rHeight++;
@@ -271,7 +270,7 @@ public class BoxBuilder {
             return null;
         }
 
-        List children = new ArrayList();
+        List<Styleable> children = new ArrayList<>();
 
         ChildBoxInfo info = new ChildBoxInfo();
         info.setContainsTableContent(true);
@@ -293,17 +292,13 @@ public class BoxBuilder {
             stripAllWhitespace(children);
         }
 
-        if (children.size() == 0 && style.isAutoWidth() && ! alwaysCreate) {
-            return null;
-        }
-
         resolveChildTableContent(c, result, children, info, IdentValue.TABLE_CELL);
 
         return result;
     }
 
     private static void resolveChildren(
-            LayoutContext c, BlockBox owner, List children, ChildBoxInfo info) {
+            LayoutContext c, BlockBox owner, List<Styleable> children, ChildBoxInfo info) {
         if (children.size() > 0) {
             if (info.isContainsBlockLevelContent()) {
                 insertAnonymousBlocks(
@@ -323,15 +318,8 @@ public class BoxBuilder {
         }
     }
 
-    private static boolean isAllProperTableNesting(IdentValue parentDisplay, List children) {
-        for (Iterator i = children.iterator(); i.hasNext();) {
-            Styleable child = (Styleable) i.next();
-            if (!isProperTableNesting(parentDisplay, child.getStyle().getIdent(CSSName.DISPLAY))) {
-                return false;
-            }
-        }
-
-        return true;
+    private static boolean isAllProperTableNesting(IdentValue parentDisplay, List<Styleable> children) {
+        return children.stream().allMatch(child -> isProperTableNesting(parentDisplay, child.getStyle().getIdent(CSSName.DISPLAY)));
     }
 
     /**
@@ -344,14 +332,13 @@ public class BoxBuilder {
      * finally a <code>table</code>).
      */
     private static void resolveChildTableContent(
-            LayoutContext c, BlockBox parent, List children, ChildBoxInfo info, IdentValue target) {
-        List childrenForAnonymous = new ArrayList();
-        List childrenWithAnonymous = new ArrayList();
+            LayoutContext c, BlockBox parent, List<Styleable> children, ChildBoxInfo info, IdentValue target) {
+        List<Styleable> childrenForAnonymous = new ArrayList<>();
+        List<Styleable> childrenWithAnonymous = new ArrayList<>();
 
         IdentValue nextUp = getPreviousTableNestingLevel(target);
-        for (Iterator i = children.iterator(); i.hasNext();) {
-            Styleable styleable = (Styleable) i.next();
-
+        
+        for (Styleable styleable : children) {
             if (matchesTableLevel(target, styleable.getStyle().getIdent(CSSName.DISPLAY))) {
                 childrenForAnonymous.add(styleable);
             } else {
@@ -359,7 +346,7 @@ public class BoxBuilder {
                     createAnonymousTableContent(c, (BlockBox) childrenForAnonymous.get(0), nextUp,
                             childrenForAnonymous, childrenWithAnonymous);
 
-                    childrenForAnonymous = new ArrayList();
+                    childrenForAnonymous = new ArrayList<>();
                 }
                 childrenWithAnonymous.add(styleable);
             }
@@ -394,10 +381,9 @@ public class BoxBuilder {
      * it is always possible to construct anonymous blocks once an element's
      * children has been distributed among anonymous table objects.
      */
-    private static void rebalanceInlineContent(List content) {
-        Map boxesByElement = new HashMap();
-        for (Iterator i = content.iterator(); i.hasNext();) {
-            Styleable styleable = (Styleable) i.next();
+    private static void rebalanceInlineContent(List<Styleable> content) {
+        Map<Element, InlineBox> boxesByElement = new HashMap<>();
+        for (Styleable styleable : content) {
             if (styleable instanceof InlineBox) {
                 InlineBox iB = (InlineBox) styleable;
                 Element elem = iB.getElement();
@@ -410,18 +396,17 @@ public class BoxBuilder {
             }
         }
 
-        for (Iterator i = boxesByElement.values().iterator(); i.hasNext();) {
-            InlineBox iB = (InlineBox) i.next();
+        for (InlineBox iB : boxesByElement.values()) {
             iB.setEndsHere(true);
         }
     }
 
-    private static void stripAllWhitespace(List content) {
+    private static void stripAllWhitespace(List<Styleable> content) {
         int start = 0;
         int current = 0;
         boolean started = false;
         for (current = 0; current < content.size(); current++) {
-            Styleable styleable = (Styleable) content.get(current);
+            Styleable styleable = content.get(current);
             if (! styleable.getStyle().isLayedOutInInlineContext()) {
                 if (started) {
                     int before = content.size();
@@ -450,7 +435,7 @@ public class BoxBuilder {
      * are inserted to ensure the integrity of the table model.
      */
     private static void resolveTableContent(
-            LayoutContext c, BlockBox parent, List children, ChildBoxInfo info) {
+            LayoutContext c, BlockBox parent, List<Styleable> children, ChildBoxInfo info) {
         IdentValue parentDisplay = parent.getStyle().getIdent(CSSName.DISPLAY);
         IdentValue next = getNextTableNestingLevel(parentDisplay);
         if (next == null && parent.isAnonymous() && containsOrphanedTableContent(children)) {
@@ -461,10 +446,10 @@ public class BoxBuilder {
             }
             resolveChildren(c, parent, children, info);
         } else {
-            List childrenForAnonymous = new ArrayList();
-            List childrenWithAnonymous = new ArrayList();
-            for (Iterator i = children.iterator(); i.hasNext();) {
-                Styleable child = (Styleable) i.next();
+            List<Styleable> childrenForAnonymous = new ArrayList<>();
+            List<Styleable> childrenWithAnonymous = new ArrayList<>();
+            
+            for (Styleable child : children) {
                 IdentValue childDisplay = child.getStyle().getIdent(CSSName.DISPLAY);
 
                 if (isProperTableNesting(parentDisplay, childDisplay)) {
@@ -472,7 +457,7 @@ public class BoxBuilder {
                         createAnonymousTableContent(c, parent, next, childrenForAnonymous,
                                 childrenWithAnonymous);
 
-                        childrenForAnonymous = new ArrayList();
+                        childrenForAnonymous = new ArrayList<>();
                     }
                     childrenWithAnonymous.add(child);
                 } else {
@@ -489,20 +474,17 @@ public class BoxBuilder {
             resolveChildren(c, parent, childrenWithAnonymous, info);
         }
     }
+    
+    private static boolean isTableRowOrRowGroup(Styleable child) {
+        IdentValue display = child.getStyle().getIdent(CSSName.DISPLAY);
+        return (display == IdentValue.TABLE_HEADER_GROUP ||
+                display == IdentValue.TABLE_ROW_GROUP ||
+                display == IdentValue.TABLE_FOOTER_GROUP ||
+                display == IdentValue.TABLE_ROW);
+    }
 
-    private static boolean containsOrphanedTableContent(List children) {
-        for (Iterator i = children.iterator(); i.hasNext();) {
-            Styleable child = (Styleable) i.next();
-            IdentValue display = child.getStyle().getIdent(CSSName.DISPLAY);
-            if (display == IdentValue.TABLE_HEADER_GROUP ||
-                    display == IdentValue.TABLE_ROW_GROUP ||
-                    display == IdentValue.TABLE_FOOTER_GROUP ||
-                    display == IdentValue.TABLE_ROW) {
-                return true;
-            }
-        }
-
-        return false;
+    private static boolean containsOrphanedTableContent(List<Styleable> children) {
+        return children.stream().anyMatch(BoxBuilder::isTableRowOrRowGroup);
     }
 
     private static boolean isParentInline(BlockBox box) {
@@ -511,7 +493,7 @@ public class BoxBuilder {
     }
 
     private static void createAnonymousTableContent(LayoutContext c, BlockBox source,
-                                                    IdentValue next, List childrenForAnonymous, List childrenWithAnonymous) {
+                                                    IdentValue next, List<Styleable> childrenForAnonymous, List<Styleable> childrenWithAnonymous) {
         ChildBoxInfo nested = lookForBlockContent(childrenForAnonymous);
         IdentValue anonDisplay;
         if (isParentInline(source) && next == IdentValue.TABLE) {
@@ -541,15 +523,15 @@ public class BoxBuilder {
      * If not, the table is returned.
      */
     private static BlockBox reorderTableContent(LayoutContext c, TableBox table) {
-        List topCaptions = new LinkedList();
+        List<Box> topCaptions = new ArrayList<>();
         Box header = null;
-        List bodies = new LinkedList();
+        List<Box> bodies = new ArrayList<>();
         Box footer = null;
-        List bottomCaptions = new LinkedList();
+        List<Box> bottomCaptions = new ArrayList<>();
 
-        for (Iterator i = table.getChildIterator(); i.hasNext();) {
-            Box b = (Box) i.next();
+        for (Box b : table.getChildren()) {
             IdentValue display = b.getStyle().getIdent(CSSName.DISPLAY);
+            
             if (display == IdentValue.TABLE_CAPTION) {
                 IdentValue side = b.getStyle().getIdent(CSSName.CAPTION_SIDE);
                 if (side == IdentValue.BOTTOM) {
@@ -626,15 +608,13 @@ public class BoxBuilder {
         }
     }
 
-    private static ChildBoxInfo lookForBlockContent(List styleables) {
+    private static ChildBoxInfo lookForBlockContent(List<Styleable> styleables) {
         ChildBoxInfo result = new ChildBoxInfo();
-        for (Iterator i = styleables.iterator(); i.hasNext();) {
-            Styleable s = (Styleable) i.next();
-            if (!s.getStyle().isLayedOutInInlineContext()) {
-                result.setContainsBlockLevelContent(true);
-                break;
-            }
+        
+        if (styleables.stream().anyMatch(s -> !s.getStyle().isLayedOutInInlineContext())) {
+            result.setContainsBlockLevelContent(true);
         }
+        
         return result;
     }
 
@@ -690,9 +670,9 @@ public class BoxBuilder {
 
     private static boolean isAttrFunction(FSFunction function) {
         if (function.getName().equals("attr")) {
-            List params = function.getParameters();
+            List<PropertyValue> params = function.getParameters();
             if (params.size() == 1) {
-                PropertyValue value = (PropertyValue) params.get(0);
+                PropertyValue value = params.get(0);
                 return value.getPrimitiveType() == CSSPrimitiveValue.CSS_IDENT;
             }
         }
@@ -702,15 +682,15 @@ public class BoxBuilder {
 
     public static boolean isElementFunction(FSFunction function) {
         if (function.getName().equals("element")) {
-            List params = function.getParameters();
+            List<PropertyValue> params = function.getParameters();
             if (params.size() < 1 || params.size() > 2) {
                 return false;
             }
             boolean ok = true;
-            PropertyValue value1 = (PropertyValue) params.get(0);
+            PropertyValue value1 = params.get(0);
             ok = value1.getPrimitiveType() == CSSPrimitiveValue.CSS_IDENT;
             if (ok && params.size() == 2) {
-                PropertyValue value2 = (PropertyValue) params.get(1);
+                PropertyValue value2 = params.get(1);
                 ok = value2.getPrimitiveType() == CSSPrimitiveValue.CSS_IDENT;
             }
 
@@ -722,12 +702,12 @@ public class BoxBuilder {
 
     private static CounterFunction makeCounterFunction(FSFunction function, LayoutContext c, CalculatedStyle style) {
         if (function.getName().equals("counter")) {
-            List params = function.getParameters();
+            List<PropertyValue> params = function.getParameters();
             if (params.size() < 1 || params.size() > 2) {
                 return null;
             }
 
-            PropertyValue value = (PropertyValue) params.get(0);
+            PropertyValue value = params.get(0);
             if (value.getPrimitiveType() != CSSPrimitiveValue.CSS_IDENT) {
                 return null;
             }
@@ -741,7 +721,7 @@ public class BoxBuilder {
             String counter = value.getStringValue();
             IdentValue listStyleType = IdentValue.DECIMAL;
             if (params.size() == 2) {
-                value = (PropertyValue) params.get(1);
+                value = params.get(1);
                 if (value.getPrimitiveType() != CSSPrimitiveValue.CSS_IDENT) {
                     return null;
                 }
@@ -757,19 +737,19 @@ public class BoxBuilder {
 
             return new CounterFunction(counterValue, listStyleType);
         } else if (function.getName().equals("counters")) {
-            List params = function.getParameters();
+            List<PropertyValue> params = function.getParameters();
             if (params.size() < 2 || params.size() > 3) {
                 return null;
             }
 
-            PropertyValue value = (PropertyValue) params.get(0);
+            PropertyValue value = params.get(0);
             if (value.getPrimitiveType() != CSSPrimitiveValue.CSS_IDENT) {
                 return null;
             }
 
             String counter = value.getStringValue();
 
-            value = (PropertyValue) params.get(1);
+            value = params.get(1);
             if (value.getPrimitiveType() != CSSPrimitiveValue.CSS_STRING) {
                 return null;
             }
@@ -778,7 +758,7 @@ public class BoxBuilder {
 
             IdentValue listStyleType = IdentValue.DECIMAL;
             if (params.size() == 3) {
-                value = (PropertyValue) params.get(2);
+                value = params.get(2);
                 if (value.getPrimitiveType() != CSSPrimitiveValue.CSS_IDENT) {
                     return null;
                 }
@@ -790,7 +770,7 @@ public class BoxBuilder {
                 }
             }
 
-            List counterValues = c.getCounterContext(style).getCurrentCounterValues(counter);
+            List<Integer> counterValues = c.getCounterContext(style).getCurrentCounterValues(counter);
 
             return new CounterFunction(counterValues, separator, listStyleType);
         } else {
@@ -803,21 +783,19 @@ public class BoxBuilder {
         return e.getAttribute(value.getStringValue());
     }
 
-    private static List createGeneratedContentList(
+    private static List<Styleable> createGeneratedContentList(
             LayoutContext c, Element element, PropertyValue propValue,
             String peName, CalculatedStyle style, int mode, ChildBoxInfo info) {
-        List values = propValue.getValues();
+        List<PropertyValue> values = propValue.getValues();
 
         if (values == null) {
             // content: normal or content: none
-            return Collections.EMPTY_LIST;
+            return Collections.emptyList();
         }
 
-        List result = new ArrayList(values.size());
+        List<Styleable> result = new ArrayList<>(values.size());
 
-        for (Iterator i = values.iterator(); i.hasNext();) {
-            PropertyValue value = (PropertyValue) i.next();
-
+        for (PropertyValue value : values) {
             ContentFunction contentFunction = null;
             FSFunction function = null;
 
@@ -826,6 +804,21 @@ public class BoxBuilder {
             short type = value.getPrimitiveType();
             if (type == CSSPrimitiveValue.CSS_STRING) {
                 content = value.getStringValue();
+            } else if (type == CSSPrimitiveValue.CSS_URI) {
+                Element creator = element != null ? element : c.getRootLayer().getMaster().getElement();
+                Document doc = creator.getOwnerDocument();
+                Element img = doc.createElement("img");
+                img.setAttribute("src", value.getStringValue());
+                creator.appendChild(img);
+
+                BlockBox iB = new BlockBox();
+                iB.setElement(img);
+                CalculatedStyle anon = new EmptyStyle().createAnonymousStyle(IdentValue.INLINE_BLOCK);
+                iB.setStyle(anon);
+
+                info.setContainsBlockLevelContent(true);
+
+                result.add(iB);
             } else if (value.getPropertyValueType() == PropertyValue.VALUE_TYPE_FUNCTION) {
                 if (mode == CONTENT_LIST_DOCUMENT && isAttrFunction(value.getFunction())) {
                     content = getAttributeValue(value.getFunction(), element);
@@ -880,7 +873,7 @@ public class BoxBuilder {
             }
 
             if (content != null) {
-                InlineBox iB = new InlineBox(content, null);
+                InlineBox iB = new InlineBox(content);
                 iB.setContentFunction(contentFunction);
                 iB.setFunction(function);
                 iB.setElement(element);
@@ -896,7 +889,7 @@ public class BoxBuilder {
     }
 
     public static BlockBox getRunningBlock(LayoutContext c, PropertyValue value) {
-        List params = value.getFunction().getParameters();
+        List<PropertyValue> params = value.getFunction().getParameters();
         String ident = ((PropertyValue)params.get(0)).getStringValue();
         PageElementPosition position = null;
         if (params.size() == 2) {
@@ -912,7 +905,7 @@ public class BoxBuilder {
 
     private static void insertGeneratedContent(
             LayoutContext c, Element element, CalculatedStyle parentStyle,
-            String peName, List children, ChildBoxInfo info) {
+            String peName, List<Styleable> children, ChildBoxInfo info) {
         CascadedStyle peStyle = c.getCss().getPseudoElementStyle(element, peName);
         if (peStyle != null) {
             PropertyDeclaration contentDecl = peStyle.propertyByName(CSSName.CONTENT);
@@ -947,19 +940,53 @@ public class BoxBuilder {
         }
     }
 
-    private static List createGeneratedContent(
+    private static List<Styleable> createGeneratedContent(
             LayoutContext c, Element element, String peName,
             CalculatedStyle style, PropertyValue property, ChildBoxInfo info) {
         if (style.isDisplayNone() || style.isIdent(CSSName.DISPLAY, IdentValue.TABLE_COLUMN)
                 || style.isIdent(CSSName.DISPLAY, IdentValue.TABLE_COLUMN_GROUP)) {
-            return Collections.EMPTY_LIST;
+            return Collections.emptyList();
         }
 
-        List inlineBoxes = createGeneratedContentList(
-                c, element, property, peName, style, CONTENT_LIST_DOCUMENT, null);
+        ChildBoxInfo childInfo = new ChildBoxInfo();
+        List<Styleable> inlineBoxes = createGeneratedContentList(
+                c, element, property, peName, style, CONTENT_LIST_DOCUMENT, childInfo);
 
-        if (style.isInline()) {
-            for (Iterator i = inlineBoxes.iterator(); i.hasNext();) {
+        if (childInfo.isContainsBlockLevelContent()) {
+            List<Styleable> inlines = new ArrayList<>();
+
+            CalculatedStyle anonStyle = style.isInlineBlock() || style.isInline() ?
+                           style : style.createAnonymousStyle(IdentValue.INLINE_BLOCK);
+
+            BlockBox result = createBlockBox(style, info, true);
+            result.setStyle(anonStyle);
+            result.setElement(element);
+            result.setChildrenContentType(BlockBox.CONTENT_INLINE);
+            result.setPseudoElementOrClass(peName);
+
+            CalculatedStyle anon = style.createAnonymousStyle(IdentValue.INLINE);
+            for (Iterator<Styleable> i = inlineBoxes.iterator(); i.hasNext();) {
+               Styleable b = i.next();
+
+               if (b instanceof BlockBox) {
+                   inlines.add(b);
+               } else {
+                   InlineBox iB = (InlineBox) b;
+
+                   iB.setStyle(anon);
+                   iB.applyTextTransform();
+                   iB.setElement(null);
+
+                   inlines.add(iB);
+               }
+            }
+
+            if (!inlines.isEmpty()) {
+                result.setInlineContent(inlines);
+            }
+            return Collections.singletonList(result);
+        } else if (style.isInline()) {
+            for (Iterator<Styleable> i = inlineBoxes.iterator(); i.hasNext();) {
                 InlineBox iB = (InlineBox) i.next();
                 iB.setStyle(style);
                 iB.applyTextTransform();
@@ -967,7 +994,7 @@ public class BoxBuilder {
             return inlineBoxes;
         } else {
             CalculatedStyle anon = style.createAnonymousStyle(IdentValue.INLINE);
-            for (Iterator i = inlineBoxes.iterator(); i.hasNext();) {
+            for (Iterator<Styleable> i = inlineBoxes.iterator(); i.hasNext();) {
                 InlineBox iB = (InlineBox) i.next();
                 iB.setStyle(anon);
                 iB.applyTextTransform();
@@ -985,19 +1012,19 @@ public class BoxBuilder {
                 info.setContainsBlockLevelContent(true);
             }
 
-            return new ArrayList(Collections.singletonList(result));
+            return new ArrayList<>(Collections.singletonList(result));
         }
     }
 
-    private static List createGeneratedMarginBoxContent(
+    private static List<Styleable> createGeneratedMarginBoxContent(
             LayoutContext c, Element element, PropertyValue property,
             CalculatedStyle style, ChildBoxInfo info) {
-        List result = createGeneratedContentList(
+        
+        List<Styleable> result = createGeneratedContentList(
                 c, element, property, null, style, CONTENT_LIST_MARGIN_BOX, info);
 
         CalculatedStyle anon = style.createAnonymousStyle(IdentValue.INLINE);
-        for (Iterator i = result.iterator(); i.hasNext();) {
-            Styleable s = (Styleable) i.next();
+        for (Styleable s : result) {
             if (s instanceof InlineBox) {
                 InlineBox iB = (InlineBox)s;
                 iB.setElement(null);
@@ -1011,10 +1038,13 @@ public class BoxBuilder {
 
     private static BlockBox createBlockBox(
             CalculatedStyle style, ChildBoxInfo info, boolean generated) {
-        if (style.isFloated() && !(style.isAbsolute() || style.isFixed())) {
+    	if (style.isFloated() && !(style.isAbsolute() || style.isFixed())) {
             BlockBox result;
             if (style.isTable() || style.isInlineTable()) {
                 result = new TableBox();
+            } else if (style.isTableCell()) {
+                info.setContainsTableContent(true);
+                result = new TableCellBox();
             } else {
                 result = new BlockBox();
             }
@@ -1076,7 +1106,7 @@ public class BoxBuilder {
 
     private static InlineBox createInlineBox(
             String text, Element parent, CalculatedStyle parentStyle, Text node) {
-        InlineBox result = new InlineBox(text, node);
+        InlineBox result = new InlineBox(text);
 
         if (parentStyle.isInline() && ! (parent.getParentNode() instanceof Document)) {
             result.setStyle(parentStyle);
@@ -1092,7 +1122,7 @@ public class BoxBuilder {
 
     private static void createChildren(
             LayoutContext c, BlockBox blockParent, Element parent,
-            List children, ChildBoxInfo info, boolean inline) {
+            List<Styleable> children, ChildBoxInfo info, boolean inline) {
         SharedContext sharedContext = c.getSharedContext();
 
         CalculatedStyle parentStyle = sharedContext.getStyle(parent);
@@ -1120,7 +1150,7 @@ public class BoxBuilder {
 						Node startAttribute = working.getAttributes().getNamedItem("start");
 						if (startAttribute != null) {
 							try {
-								start = new Integer(Integer.parseInt(startAttribute.getNodeValue()) - 1);
+								start = Integer.valueOf(Integer.parseInt(startAttribute.getNodeValue()) - 1);
 							} catch (NumberFormatException e) {
 								// ignore
 							}
@@ -1129,7 +1159,7 @@ public class BoxBuilder {
 						Node valueAttribute = working.getAttributes().getNamedItem("value");
 						if (valueAttribute != null) {
 							try {
-								start = new Integer(Integer.parseInt(valueAttribute.getNodeValue()) - 1);
+								start = Integer.valueOf(Integer.parseInt(valueAttribute.getNodeValue()) - 1);
 							} catch (NumberFormatException e) {
 								// ignore
 							}
@@ -1166,9 +1196,23 @@ public class BoxBuilder {
                             needEndText = true;
                         }
                     } else {
-                        child = createBlockBox(style, info, false);
+                    	if (style.hasColumns() && c.isPrint()) {
+                            child = new FlowingColumnContainerBox();
+                    	} else {
+                    		child = createBlockBox(style, info, false);
+                    	}
+                    	
                         child.setStyle(style);
                         child.setElement(element);
+                        
+                        if (style.hasColumns() && c.isPrint()) {
+                            FlowingColumnContainerBox cont = (FlowingColumnContainerBox) child;
+                            cont.setOnlyChild(c, new FlowingColumnBox(cont));
+                            cont.getChild().setStyle(style.createAnonymousStyle(IdentValue.BLOCK));
+                            cont.getChild().setElement(element);
+                            cont.getChild().ensureChildren(c);
+                        }
+                        
                         if (style.isListItem()) {
                             BlockBox block = (BlockBox) child;
                             block.setListCounter(c.getCounterContext(style).getCurrentCounterValue("list-item"));
@@ -1237,6 +1281,16 @@ public class BoxBuilder {
         return child;
     }
     
+    private static InlineBox doFakeBidi(LayoutContext c, Text textNode, Element parent, CalculatedStyle parentStyle, InlineBox previousIB, List<Styleable> children) {
+    	String runText = textNode.getData();
+    	InlineBox child = createInlineBox(runText, parent, parentStyle, textNode);
+    	child.setTextDirection(BidiSplitter.LTR);
+    	previousIB = setupInlineChild(child, previousIB);
+       	children.add(child);
+       	return previousIB;
+    }
+    
+    
     /**
      * Attempts to divide a Text node further into directional text runs, either LTR or RTL. 
      * @param c
@@ -1245,12 +1299,21 @@ public class BoxBuilder {
      * @param parentStyle
      * @return the previousIB.
      */
-    private static InlineBox doBidi(LayoutContext c, Text textNode, Element parent, CalculatedStyle parentStyle, InlineBox previousIB, List children) {
+    private static InlineBox doBidi(LayoutContext c, Text textNode, Element parent, CalculatedStyle parentStyle, InlineBox previousIB, List<Styleable> children) {
     	
         Paragraph para = c.getParagraphSplitter().lookupParagraph(textNode);
-        assert(para != null);
+        if (para == null) {
+        	// Must be no implementation of BIDI for this Text node.
+        	return doFakeBidi(c, textNode, parent, parentStyle, previousIB, children);
+        }
         
         int startIndex = para.getFirstCharIndexInParagraph(textNode); // Index into the paragraph.
+        
+        if (startIndex < 0) {
+        	// Must be a fake implementation of BIDI.
+        	return doFakeBidi(c, textNode, parent, parentStyle, previousIB, children);
+        }
+        
         int nodeIndex = 0;                                            // Index into the text node.
         String runText;                                               // Calculated text for the directional run.
         
@@ -1278,6 +1341,11 @@ public class BoxBuilder {
        		runText = textNode.getData().substring(0, nodeIndex);
        	}
        	
+		// Shape here, so the layout will get the right visual length for the run.
+		if (prevSplit.getDirection() == BidiSplitter.RTL) {
+			runText = c.getBidiReorderer().shapeText(runText);
+		}
+
        	InlineBox child = createInlineBox(runText, parent, parentStyle, textNode);
        	child.setTextDirection(prevSplit.getDirection());
        	previousIB = setupInlineChild(child, previousIB);
@@ -1333,16 +1401,17 @@ public class BoxBuilder {
     }
     
     private static void insertAnonymousBlocks(
-            SharedContext c, Box parent, List children, boolean layoutRunningBlocks) {
-        List inline = new ArrayList();
+            SharedContext c, Box parent, List<Styleable> children, boolean layoutRunningBlocks) {
 
-        LinkedList parents = new LinkedList();
-        List savedParents = null;
+        List<Styleable> inline = new ArrayList<>();
+        Deque<InlineBox> parents = new ArrayDeque<>();
+        List<InlineBox> savedParents = null;
 
-        for (Iterator i = children.iterator(); i.hasNext();) {
-            Styleable child = (Styleable) i.next();
+        for (Styleable child : children) {
             if (child.getStyle().isLayedOutInInlineContext() &&
-                    ! (layoutRunningBlocks && child.getStyle().isRunning())) {
+                    ! (layoutRunningBlocks && child.getStyle().isRunning()) &&
+                    !child.getStyle().isTableCell() //see issue https://github.com/danfickle/openhtmltopdf/issues/309
+            ) {
                 inline.add(child);
 
                 if (child.getStyle().isInline()) {
@@ -1357,8 +1426,8 @@ public class BoxBuilder {
             } else {
                 if (inline.size() > 0) {
                     createAnonymousBlock(c, parent, inline, savedParents);
-                    inline = new ArrayList();
-                    savedParents = new ArrayList(parents);
+                    inline = new ArrayList<>();
+                    savedParents = new ArrayList<>(parents);
                 }
                 parent.addChild((Box) child);
             }
@@ -1367,12 +1436,19 @@ public class BoxBuilder {
         createAnonymousBlock(c, parent, inline, savedParents);
     }
 
-    private static void createAnonymousBlock(SharedContext c, Box parent, List inline,
-                                             List savedParents) {
+    private static void createAnonymousInlineBlock(SharedContext c, Box parent, List<Styleable> inline, List<InlineBox> savedParents) {
+        createAnonymousBlock(c, parent, inline, savedParents, IdentValue.INLINE_BLOCK);
+    }
+
+    private static void createAnonymousBlock(SharedContext c, Box parent, List<Styleable> inline, List<InlineBox> savedParents) {
+        createAnonymousBlock(c, parent, inline, savedParents, IdentValue.BLOCK);
+    }
+
+    private static void createAnonymousBlock(SharedContext c, Box parent, List<Styleable> inline, List<InlineBox> savedParents, IdentValue display) {
         WhitespaceStripper.stripInlineContent(inline);
         if (inline.size() > 0) {
             AnonymousBlockBox anon = new AnonymousBlockBox(parent.getElement());
-            anon.setStyle(parent.getStyle().createAnonymousStyle(IdentValue.BLOCK));
+            anon.setStyle(parent.getStyle().createAnonymousStyle(display));
             anon.setAnonymous(true);
             if (savedParents != null && savedParents.size() > 0) {
                 anon.setOpenInlineBoxes(savedParents);
